# prao

./: .gitignore  CMakeLists.txt  Compresser.cpp  Compresser.h  config_big.json  config_big2.json  config_small.json  config_small2.json  main.cpp
Calibration/: CalibrationData.cpp  CalibrationData.h  CalibrationDataInput.cpp  CalibrationDataInput.h  CalibrationDataStorage.cpp  CalibrationDataStorage.h
Config/: Config.cpp  Config.h
Logger/: Logger.cpp  Logger.h
Metrics/: MetricsContainer.cpp  MetricsContainer.h  MetricsType.cpp  MetricsType.h
Processing/: Compresser.cpp  Compresser.h  OpenCLContext.cpp  OpenCLContext.h
Processing/Kernels/: heapSort.cl  nth_element.cl
Reader/: DataReader.cpp  DataReader.h  FilesListItem.cpp  FilesListItem.h
Time/: Time.cpp  Time.h
plot/: app.py  file_loader.py  requirements.txt
resources/examples/: bigCalibrationParts.txt  config_big.json  config_small.json  filesListBig.txt  filesListSmall.txt  smallCalibrationParts.txt
